neo4j-admin report can take heap dumps again
Fixes a bug in neo4j-admin report command where using the heap classifier would
make the command fail with Error: Failed to write heapdump.hprof